# hostel

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  PRD.md  README.md  config.toml
docs/: PRD.md
skills/hostel/: SKILL.md
src/: app.rs  cli.rs  config.rs  main.rs  mcp.rs  registry.rs  scanner.rs  service.rs  ui.rs
