[package]
name = "localhostel"
version = "0.1.0"
edition = "2024"
description = "A beautiful TUI for managing localhost sessions"
license = "MIT"

[dependencies]
appcui = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
