[package]
name = "localhostel"
version = "0.1.0"
edition = "2021"
description = "A beautiful TUI for managing localhost sessions"
license = "MIT"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
libc = "0.2"
tokio-stream = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
